# shuup-mailchimp

./: .coveragerc  .travis.yml  README.rst  setup.cfg  setup.py  test_requirements.txt
.tx/: config
shuup_mailchimp/: __init__.py  apps.py  configuration_keys.py  models.py  plugins.py  providers.py  receivers.py  urls.py  utils.py  views.py
shuup_mailchimp/admin/: __init__.py  forms.py  views.py
shuup_mailchimp/admin_module/: __init__.py  forms.py
shuup_mailchimp/admin_module/views/: __init__.py  connect.py
shuup_mailchimp/interface/: __init__.py  base.py  client.py  member.py
shuup_mailchimp/interface/utils/: connection.py  contacts.py  testing.py
shuup_mailchimp/locale/en/LC_MESSAGES/: django.mo  django.po
shuup_mailchimp/locale/fi_FI/LC_MESSAGES/: django.mo
shuup_mailchimp/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
shuup_mailchimp/migrations/: 0004_mailchimpstatuslog.py
shuup_mailchimp/templates/shuup_mailchimp/: newsletter.jinja
shuup_mailchimp/templates/shuup_mailchimp/admin/: config_form_part.jinja  connect.jinja
shuup_mailchimp_tests/: conftest.py  mock_responses.py  settings.py  test_add_from_contact.py  test_add_from_order.py  test_admin.py  test_interface_test.py  utils.py
