[metadata]
name = shuup-mailchimp
version = 0.9.1
description = Shuup Mailchimp
long_description = file: README.rst
keywords = shuup,mailchimp,monkeys

[options]
include_package_data = True
packages = find:
install_requires =
    mailchimp3>=3.0.6,<4

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_mailchimp_tests.settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup_mailchimp,shuup_mailchimp_tests
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,six,pytest,requests,mock
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations
not_skip=__init__.py
wrap_length=79
